@@ -8,7 +8,7 @@
 *********************************************************************/
 
 /*
- * $Id: OpenGL_Utils.c,v 1.89 2008/01/22 14:23:46 crc_canada Exp $
+ * $Id: OpenGL_Utils.c,v 1.90 2008/01/24 18:33:14 crc_canada Exp $
  *
  */
 #include "headers.h"
@@ -550,7 +550,13 @@ void zeroVisibilityFlag(void) {
 		/* we do... lets zero the hasVisibleChildren flag */
 		for (i=0; i<nextEntry; i++){		
 			node = memoryTable[i];		
-			/* printf ("zeroVisibility - %d is a %s, flags %x\n",i,stringNodeType(node->_nodeType), (node->_renderFlags) & VF_hasVisibleChildren); */
+			
+			#ifdef OCCLUSIONVERBOSE
+			if (((node->_renderFlags) & VF_hasVisibleChildren) != 0) {
+			printf ("zeroVisibility - %d is a %s, flags %x\n",i,stringNodeType(node->_nodeType), (node->_renderFlags) & VF_hasVisibleChildren); 
+			}
+			#endif
+
 			node->_renderFlags = node->_renderFlags & (0xFFFF^VF_hasVisibleChildren);
 	
 			/* do we have a tie in here for node-name? */
